--- a/src/web/src/server/views/index.pug
+++ b/src/web/src/server/views/index.pug
@@ -8,4 +8,6 @@ html
   body
     #root!= html
     script.
-      window.__PRELOADED_STATE__ = !{JSON.stringify(preloadedState)}
+      window.__PRELOADED_STATE__ = !{JSON.stringify(state)};
+      window.__CONFIG__ = !{JSON.stringify(config)};
+    script(src="/public/js/bundle.js")
