--- a/src/web/src/server/views/index.pug
+++ b/src/web/src/server/views/index.pug
@@ -3,6 +3,7 @@ html
     title Awesome Conferences
     meta(charset="utf-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
+    link(rel="shortcut icon" href="/public/favicon.ico")
     link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css")
     link(rel="stylesheet" href="/public/css/style.css")
   body
