--- a/src/web/src/server/views/index.pug
+++ b/src/web/src/server/views/index.pug
@@ -5,7 +5,7 @@ html
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     link(rel="shortcut icon" href="/public/favicon.ico")
     link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css")
-    link(rel="stylesheet" href="/public/css/style.css")
+    link(rel="stylesheet" href="/public/css/bundle.css")
   body
     #root!= html
     script.
