--- a/src/web/src/common/components/video/video-item.scss
+++ b/src/web/src/common/components/video/video-item.scss
@@ -1,3 +1,17 @@
 .video-item {
+  position: relative;
 
+  &__trigger {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+  }
+
+  &__thumbnail {
+    width: 100%;
+    height: auto;
+  }
 }
