--- a/src/web/src/common/components/header/navigation-bar/navigation.scss
+++ b/src/web/src/common/components/header/navigation-bar/navigation.scss
@@ -1,1 +1,11 @@
 @import './user-navigation/user-navigation';
+
+.navigation {
+  padding: 1em 0;
+
+  &__group {
+    display: inline-block;
+    width: 50%;
+    text-align: left;
+  }
+}
