--- a/src/web/src/common/conference/index.scss
+++ b/src/web/src/common/conference/index.scss
@@ -1,2 +1,3 @@
 @import './conferences-list-item/conferences-list-item';
 @import './conferences-list/conferences-list';
+@import './conference-editor/conference-editor';
